# PrivacyLens-OCR-SDK

./: .gitignore  CMakeLists.txt  README.md  WORKLOG.md
docs/: architecture.md  artifact-policy.md  backend-roadmap.md  dynamic-loading.md  engine-sdk-architecture-cleanup-design.md
docs/superpowers/plans/: 2026-06-18-engine-sdk-architecture-cleanup.md
include/: pl_engine.h  pl_ocr.h
src/backends/paddleocr_onnx/: paddleocr_onnx_backend.cpp  paddleocr_onnx_backend.hpp
src/backends/rapidocr_onnx/: rapidocr_onnx_backend.cpp  rapidocr_onnx_backend.hpp
src/backends/stub/: stub_ocr_backend.cpp  stub_ocr_backend.hpp
src/c_api/: pl_engine_api.cpp  pl_ocr_api.cpp
src/core/: engine_error.hpp  engine_session.cpp  engine_session.hpp  engine_types.hpp  ocr_backend.hpp  ocr_engine.cpp  ocr_engine.hpp  ocr_error.hpp  ocr_types.hpp
src/providers/app_window/: app_window_provider.cpp  app_window_provider.hpp  visible_regions.hpp
tests/: README.md  adapter_contract_tests.cpp  app_window_provider_tests.cpp  engine_policy_tests.cpp  visible_regions_tests.cpp
tools/pl-engine-cli/: main.cpp
tools/pl-ocr-cli/: main.cpp
